# tomledit

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/tomledit/: __init__.py  navigate.py
tests/: test_navigate.py
