[project]
name = "tomledit"
version = "0.1.0"
description = "CLI TOML Manipulator"
readme = "README.md"
authors = [{ name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" }]
requires-python = ">=3.13"
dependencies = ["cyclopts>=3.16.2", "tomlkit>=0.13.2"]

[project.scripts]
te = "tomledit:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.2.0",
 "pre-commit>=4.2.0",
 "pytest>=8.3.5",
 "ruff>=0.11.10",
]
